--- a/api/package.json
+++ b/api/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.6.2",
+    "prisma": "^5.3.1",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@prisma/client": "5.3.1",
     "fastify": "^4.23.2"
   }
 }
